--- a/Automação_de_coleta_em_fontes_abertas.ipynb
+++ b/Automação_de_coleta_em_fontes_abertas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhu9DElJVBhfuTdwRKsNJa",
+      "authorship_tag": "ABX9TyMB5kHDh88F/pwNa137OyNP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "# **Automação de coleta em fontes abertas**\n",
         "\n",
-        "**Bruno Odon**\n",
+        "### **Bruno Odon**\n",
         "\n",
         "## Objetivo\n",
         "\n",
@@ -107,7 +107,7 @@
         "id": "MMcWyuWlN12n",
         "outputId": "9fddeeb2-9a8c-413d-b4f0-6f430a9207a0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
